Lagt til koder fra forelesning 2708
Koder fra forelesning2708

--- a/Forelesning 2708/index.html
+++ b/Forelesning 2708/index.html
@@ -3,7 +3,7 @@
       <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tittle>Min første nettside</tittle>
+    <title>Min første nettside</title>
 </head> 
 <body>
     <img src="https://pixabay.com/no/photos/modell-kvinne-hud-h%C3%A5r-sminke-mote-8881740/" alt="Vakker jente">
