Lagt til koder fra forelesningen den 2708

--- a/Forelesning 2708/index.html
+++ b/Forelesning 2708/index.html
@@ -7,15 +7,23 @@
 </head> 
 <body>
     <img src="https://pixabay.com/no/photos/modell-kvinne-hud-h%C3%A5r-sminke-mote-8881740/" alt="Vakker jente">
-    image by <a href="Bildet er tatt av <a href="https://pixabay.com/no/users/krazikofi-32230991/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8881740">Daniel Osei-Akoto</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8881740">Pixabay</a>"
-   <h1>Hei verden</h1>
+    image by <a href="https://pixabay.com/no/users/krazikofi-32230991/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8881740">Daniel Osei-Akoto</a> fra <a href="https://pixabay.com/no//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8881740">Pixabay</a>
+   <h1>Hei verden!</h1>
    <h2>Hei verden!</h2>
    <h3>Hei verden!</h3>
    <h4>Hei verden!</h4>
    <h5>Hei verden!</h5>
    <h6>Hei verden!</h6>
    <p>åæåæåæåæåæåæåæåæåæååæå</p>
-   <footer>Khadija2024</footer>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   <p>åæåæåæåæåæåæåæåæåæååæå</p>
+   
+   <footer>Khadija2 024</footer>
 </body>
 
  </html>
